--- a/app/views/gossips/index.html.erb
+++ b/app/views/gossips/index.html.erb
@@ -27,11 +27,11 @@
 
 <% @gossips.each do |gossip| %>
       <tr>
-        <td><%= gossip.anonymous_author %></td>
+        <td><%= gossip.user.try(:email) %></td>
         <td><%= gossip.content %></td>
         <td><%= link_to 'Show', gossip %></td>
         <td><%= link_to 'Edit', edit_gossip_path(gossip) %></td>
-        <td><%= link_to 'Destroy', gossip, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', gossip, method: :delete, data: { confirm: 'Tu comptes vraiment effacer cette info? Tampi...' } %></td>
       </tr>
     <% end %>
 
